# FocuSD

./: README.md  package.json
docs/: agent-status-hooks.md
scripts/: focusd-agent-running.cmd  focusd-agent-status.ps1
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: clipboard_history.rs  lib.rs
